--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <table cellspacing="20" >
         <tr>
- <td> <img src="image/image2.png" height="256px"  alt="cool picture ever"></td>
+ <td> <img src="image2.png" height="256px"  alt="cool picture ever"></td>
  <td>
     <h1><em>  saurabh soni</em> </h1>
     <p>i am doing my web development journey </p>
